# build-tools

./: .gitignore  Pipfile  README.md  build-tools  build-tools.py
.github/workflows/: build.yaml
scripts/: build.sh  environment.sh  gh-release.sh  install-dependencies.sh  release.sh  smoke-test.sh  test-keychain.sh  test-wheel.sh
src/: pyproject.toml  setup.py
src/build_tools/: __init__.py  __main__.py  build_tools.py
